$Id: History,v 1.10 1999-07-23 08:15:57 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

23rd July 1999  John Allison
- Added base class copy to copy contructor of G4Polyhedron.

21st July 1999  John Allison
- Added G4PlacedPolyhedron, which includes G4PlacedPolyhedronList.

greps-01-00-08  5th June John Allison
- Added virtual operator = and overrides to G4Circle and G4Square.

greps-01-00-07  25th May 1999  John Allison
- Moved operator != to member function.

greps-01-00-06  19th May 1999  John Allison
- Fixed compilation warnings, mainly overriding virtual functions.

greps-01-00-05  12th May 1999  John Allison
- Made destructors virtual where applicable.

greps-01-00-04  28th April 1999  John Allison
- Moved G4VVisManager and G4VGraphicsScene to intercoms.

greps-01-00-03  7th February 1999  John Allison
- Removed GNU_GCC from G4Polymarker.cc.
- Added G4VGraphicsScene::AddThis (G4Polycone and G4Polyhedra.

greps-01-00-02  6th January 1999  John Allison
- Very minor change in G4VisExtent.cc - 2 -> 2.
- Inclusion of test/ in tag.

greps-01-00-01  6th January 1999  John Allison
- Corrected constructors of G4VisAttributes for initialisation of
  fDaughtersInvisible.
