@@ -1,4 +1,4 @@
-$Id: History,v 1.10 1999-07-23 08:15:57 johna Exp $
+$Id: History,v 1.11 1999-10-04 15:18:54 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+4th October 1999  John Allison  (greps-V00-01-00)
+- Improved comments in G4Visible.hh.
 
 23rd July 1999  John Allison
 - Added base class copy to copy contructor of G4Polyhedron.
